--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Your TypeScript App</title>
 </head>
 <body>
-  <div id="app"></div>
+  <div id="root"></div> <!-- This is where your React app will be mounted -->
+  <script src="pages\_app.js"></script>
 </body>
 </html>
